--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 
 :root {
   line-height: 1.5;
-  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
 
   background-color: #242424;
   cursor: none;
